# gate-rag-system

./: .gitignore  pyproject.toml
Data/text_files/: rag_intro.txt
Data/vector_store/5024bd54-7ee5-4dce-b4c2-f39bb9424613/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
